--- a/pellet_labels/.gitignore
+++ b/pellet_labels/.gitignore
@@ -1,6 +1,7 @@
 __MACOSX
 /amman_atb_data/
 /amman_blood_agar/
+/ensemble_models/
 /i2a_atb_data/
 /models/keras_tensorboard/
 /models/pellet_labels_model.h5
