--- a/.github/workflows/dev_release.yml
+++ b/.github/workflows/dev_release.yml
@@ -1,9 +1,8 @@
-name: Dev - Mobileapp Tests CI
+name: Dev - Mobileapp Release
 on:
-  pull_request:
-    branches: [ dev ]
   push:
     branches: [ dev ]
+    workflow_dispatch:
 jobs:
   trigger_tests:
     runs-on: ubuntu-latest
@@ -13,4 +12,4 @@ jobs:
       with:
         token: ${{ secrets.MOBILEAPP_REPO_ACCESS_TOKEN }}
         repository: foundationmsf/mobileapp
-        event-type: improc-dev-tests
+        event-type: improc-dev-release
